# ppl-synthesis-reward-hacking

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codex-review.yml
configs/backends/: pymc.yaml  sstan.yaml  stan.yaml  toy.yaml
configs/data/: bernoulli_1d.yaml  bernoulli_vector.yaml  gaussian_location.yaml  linear_regression.yaml  logistic_regression.yaml  pymc_reward.yaml  synthstats.yaml
configs/eval/: default.yaml
configs/exemplars/: potential_syntax.yaml  transpiler_suite.jsonl
configs/experiments/: emergent_bool.yaml  grpo_poc.yaml  micro_constant_score.yaml  micro_double_count.yaml  micro_improper_lpdf.yaml  regression_attack_grid.yaml  sstan_suite.yaml  stan_micro_constant_score.yaml  stan_micro_double_count.yaml  stan_micro_improper_lpdf.yaml
configs/hydra/: common.yaml  tinker_train.yaml  trl_train.yaml
configs/hydra/launcher/: a100.yaml  cpu-debug.yaml  h100.yaml  local.yaml  runpod.yaml  slurm.yaml
configs/hydra/train/: tinker.yaml  trl.yaml
configs/hydra/wandb/: base.yaml  tinker.yaml  trl.yaml
configs/judge/: claude-sonnet.yaml  glm-4.7.yaml  glm-5.yaml  gpt-5.2.yaml  gpt-5.4.yaml
configs/model/: llama-3.2-1b.yaml  qwen3-1.7b.yaml  qwen3-4b.yaml  qwen3_5-0.8b.yaml  qwen3_5-27b.yaml  qwen3_5-4b.yaml  qwen3_5-9b.yaml
configs/paper/: current_experiments.yaml  figures.yaml  runlist.yaml
configs/plots/: default.yaml
configs/sweeps/overleaf/: tinker_e4_baseline_off.yaml  tinker_e4_mitigated_enforce.yaml  tinker_e5_antihint.yaml
configs/sweeps/wandb/: e4_sstan_ab_baseline.yaml  e4_sstan_ab_enforce.yaml  e5_antihint.yaml  e6_judge_gate.yaml  paper_a_base.yaml  paper_b_judge.yaml  paper_b_sstan.yaml  tinker_gap.yaml  tinker_lh_emergence.yaml  tinker_partA_lh_main.yaml  tinker_partA_linear_extension.yaml  tinker_partA_linear_extension_fast.yaml  tinker_partA_metric_ablation_bic.yaml  tinker_partA_metric_ablation_elpd.yaml  tinker_partA_metric_ablation_logml.yaml  tinker_partA_metric_ablation_waic.yaml  trl_gap.yaml  trl_lh_emergence.yaml
data/pymc_reward/: pymc_reward_test.jsonl  pymc_reward_val.jsonl
data/pymc_synthesis/: test.jsonl  train.jsonl  val.jsonl
data/synthstats/: synthstats_train.jsonl
docs/: architecture.md  base_rate_exploits.md  configuration.md  quickstart.md  safestan-guide.md  scoring.md
docs/plans/: 2026-02-21-parallel-review-regressions.md
docs/provenance/: safestan_integration.md
memory/: lh_examples.md
paper_artifacts/: MANIFEST.json  baseline_vs_trained_table.tex  safety_gate_matrix.json  safety_gate_matrix_table.tex
paper_artifacts/analysis/: tinker_poc_tinker_poc_hacking_analysis.json
paper_artifacts/grpo/: code_comparison.tex
scripts/: analyze_hacking.py  analyze_hacking_emergence.py  arc_run7.sh  audit_sweep_logging.py  backfill_wandb_summary_keys.py  batch_judge_profile.py  compare_d3_conditions.py  create_wandb_sweep.py  estimate_tinker_costs.py  eval_normalization.py  eval_safety_gate.py  eval_sstan_exemplars.py  eval_taxonomy.py  evaluate_safestan_mitigation.py  evaluate_transpiler_fidelity.py  figure_style.py  generate_baseline.py  generate_d3_figures.py  generate_from_checkpoints.py  generate_paper_figures.py  hydra_train_common.py  hydra_train_tinker.py  hydra_train_trl.py  judge_completions.py  launch_phase1_wave1.sh  make_figures.sh  make_grpo_figures.py  make_paper_artifacts.py  make_safety_gate_matrix.py  measure_base_rates.py  prepare_local_figures.py  render_wandb_sweep_configs.py  report_run_progress.py  run_backend_matrix.sh  run_micro_suite.sh  run_wandb_agent.py  smoke_test_exploit.py  sweep_base_rate.py  sweep_base_rate_local.py  tinker_pymc_grpo.py  (+7 more)
scripts/arc/: arc_common.sh  run_baseline.sh  run_grpo.sh  run_grpo_r7.sh  run_trl_bernoulli_d3.sh  run_trl_bernoulli_d5.sh  run_trl_linear_d3.sh  run_trl_linear_d5.sh
scripts/dgx/: run_grpo_pymc_reward.sh  run_grpo_synthstats.sh
scripts/remote_vps/: check_overleaf_matrix_health.sh  create_overleaf_sweeps.sh  launch_overleaf_matrix.sh  rsync_and_preflight.sh  validate_overleaf_matrix.sh  watch_progress.sh
scripts/runpod/: launch.py  run_grpo_pymc_reward.sh  run_grpo_stan_reward.sh  run_tinker_api_server.sh  smoke_tinker_api.sh
src/ppl_synthesis_reward_hacking/: __main__.py  reward_sentinels.py
src/ppl_synthesis_reward_hacking/backends/: __init__.py  judge_gate.py  protocol.py  registry.py  source_parsing.py  transpiler.py
src/ppl_synthesis_reward_hacking/cli/: app.py  commands_aggregate.py  commands_data.py  commands_plot.py  (+1 more)
tests/: conftest.py  test_smoke.py
tests/integration/: conftest.py  test_e2e_analysis_pipeline.py  test_e2e_d3_normalization.py  test_e2e_exploit_pipeline.py  test_e2e_reward_fn.py  test_e2e_safety_integrity.py  test_emergent_hacking.py  test_grpo_categorical_emergence.py  test_grpo_emergence.py  test_phase1_acceptance.py  test_pymc_safe_backend.py  test_stan_micro_suite.py
tests/unit/: test_aggregate.py  test_analyze_hacking_emergence.py  test_antihint_prompt.py  test_cmdsafestan_bridge.py  test_compile_cache.py  test_completion_log.py  test_config_flattening.py  test_create_wandb_sweep_script.py  test_data_generation.py  test_data_ref_overrides.py  test_data_schema.py  test_eval_normalization_script.py  test_eval_taxonomy_script.py  test_evaluate_safestan_mitigation.py  test_evaluate_transpiler_fidelity.py  test_evolving_rubric.py  test_experimental_stan_reward_loader.py  test_hashing.py  test_heuristics.py  test_hydra_launcher_profiles.py  test_hydra_train_entrypoints.py  test_integrity_checks.py  test_jsonl_loader.py  test_judge_completions_script.py  test_judge_gate.py  test_llm_judge.py  test_make_paper_artifacts.py  test_normalization_check.py  test_normalization_importance.py  test_oracle_score_theory.py  test_paper_summary_contract.py  test_plot_styles.py  test_pymc_code_executor.py  test_pymc_reward.py  test_pymc_reward_loader.py  test_pymc_reward_sstan_gate.py  test_pymc_safe.py  test_pymc_synthesis_loader.py  test_registry.py  test_reporting_plotting_guardrails.py  (+36 more)
(+159 files in other folders)
