[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ppl-synthesis-reward-hacking"
version = "0.1.0"
description = "Experiments for reward hacking in probabilistic program synthesis"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Younesse Kaddar", email = "younesse.kaddar@cs.ox.ac.uk"},
]
dependencies = [
    "numpy==2.2.0",
    "PyYAML==6.0.2",
    "tinker>=0.8.1,<0.9",
    "omegaconf>=2.3.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.9.4",
    "mypy==1.14.1",
    "python-dotenv>=1.0.0",
    "types-PyYAML>=6.0.0",
    "pymc>=5.21.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "litellm>=1.60.0",
    "hydra-core>=1.3.2,<2.0.0",
    "hydra-submitit-launcher>=1.2.0,<2.0.0",
]
parquet = [
    "pyarrow==18.1.0",
]
arc = [
    "torch>=2.5.0,<3.0",
    "transformers>=4.51.0,<5.0",
    "trl>=0.18.0,<0.20",
    "peft>=0.14.0,<0.16",
    "accelerate>=0.35.0,<2.0",
    "datasets>=3.0.0,<4.0",
    "pymc>=5.21.0,<6.0",
    "wandb>=0.19.0,<1.0",
]
dgx = [
    "torch>=2.5.0,<3.0",
    "transformers>=4.55.0,<5.0",
    "trl>=0.20.0,<0.28",
    "peft>=0.18.0,<0.20",
    "accelerate>=1.0.0,<2.0",
    "datasets>=4.0.0,<5.0",
    "bitsandbytes>=0.49.0,<0.51",
    "pymc>=5.0.0,<6.0",
]
runpod = [
    "torch>=2.5.0,<3.0",
    "transformers>=4.55.0,<5.0",
    "trl>=0.20.0,<0.28",
    "peft>=0.18.0,<0.20",
    "accelerate>=1.0.0,<2.0",
    "datasets>=4.0.0,<5.0",
    "pymc>=5.0.0,<6.0",
]
runpod-launcher = [
    "runpod>=1.7.0",
    "python-dotenv>=1.0.0",
]
judge = [
    "litellm>=1.60.0",
    "python-dotenv>=1.0.0",
]
wandb = [
    "wandb>=0.19.0",
    "hydra-core>=1.3.2,<2.0.0",
    "hydra-submitit-launcher>=1.2.0,<2.0.0",
]
all = [
    "ppl-synthesis-reward-hacking[dev,parquet,judge,wandb]",
]

[project.scripts]
psrh = "ppl_synthesis_reward_hacking.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ppl_synthesis_reward_hacking*"]

[tool.ruff]
line-length = 100
target-version = "py311"
force-exclude = true
extend-exclude = ["*.jsonl"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]  # allow late imports after dotenv loading

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers --strict-config"
markers = [
    "pymc: requires PyMC integration",
    "stan: requires Stan integration",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = "3.11.*"

[tool.pixi.pypi-dependencies]
ppl-synthesis-reward-hacking = { path = ".", editable = true }

[tool.pixi.feature.dev.pypi-dependencies]
ppl-synthesis-reward-hacking = { path = ".", editable = true, extras = ["dev"] }

[tool.pixi.feature.parquet.pypi-dependencies]
ppl-synthesis-reward-hacking = { path = ".", editable = true, extras = ["parquet"] }

[tool.pixi.feature.all.pypi-dependencies]
ppl-synthesis-reward-hacking = { path = ".", editable = true, extras = ["all"] }

[tool.pixi.feature.arc.pypi-dependencies]
ppl-synthesis-reward-hacking = { path = ".", editable = true, extras = ["arc"] }

[tool.pixi.feature.arc.target.linux-64.dependencies]
cuda-toolkit = "12.4.*"

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}
parquet = {features = ["parquet"], solve-group = "default"}
all = {features = ["all"], solve-group = "default"}
arc = {features = ["arc"], solve-group = "arc"}

[tool.pixi.tasks]
psrh = "psrh"
test = "pytest"

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
index-strategy = "unsafe-best-match"

[dependency-groups]
dev = ["wandb>=0.25.0,<0.26", "pymc>=5.27.1,<6.0"]
